--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.6",
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
     "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
@@ -21,6 +22,13 @@
     "hardhat-contract-sizer": "^2.6.1"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.5.0"
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.0",
+    "@openzeppelin/contracts": "^4.5.0",
+    "@typechain/hardhat": "^6.1.2",
+    "@types/mocha": "^9.1.0",
+    "hardhat-gas-reporter": "^1.0.8",
+    "solidity-coverage": "^0.7.21",
+    "ts-node": ">=8.0.0",
+    "typescript": ">=4.5.0"
   }
 }
